Add maven-surefire-plugin